[package]
name = "snork_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger.workspace = true
log.workspace = true
owo-colors.workspace = true
rand.workspace = true
serde.workspace = true
mocats = { workspace = true, optional = true }

[features]
default = []
mocats = ["dep:mocats"]
